force-app/main/default/objects/Lead/fields/Claude__c.field-meta.xml
<CustomField>
    <fullName>Claude__c</fullName>
    <label>Claude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Training</fullName><default>false</default><label>Training</label></value>
            <value><fullName>Test</fullName><default>false</default><label>Test</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>