force-app/main/default/objects/Lead/fields/Overdue_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Follow_Up__c</fullName>
    <formula>(TODAY() - Last_Contacted_Date__c) &gt;= 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Follow Up</label>
    <type>Checkbox</type>
</CustomField>