force-app/main/default/objects/Lead/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>