force-app/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>GC1000 series</fullName><default>false</default><label>GC1000 series</label></value>
            <value><fullName>GC5000 series</fullName><default>false</default><label>GC5000 series</label></value>
            <value><fullName>GC3000 series</fullName><default>false</default><label>GC3000 series</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>