force-app/main/default/objects/Lead/fields/Status_Claude__c.field-meta.xml
<CustomField>
    <fullName>Status_Claude__c</fullName>
    <label>Status Claude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Working</fullName><default>false</default><label>Working</label></value>
            <value><fullName>Not Working</fullName><default>false</default><label>Not Working</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>